bad/incr_self.example_compiler_output
ERROR
[1mbad/incr_self.lat:5:6: [1;31merror: [0;1mexpression is not assignable[m
	self++;
	    [1;32m^[m
[1mbad/incr_self.lat:5:2: [1;34mnote: [0;1mexpression starts here[m
	self++;
	[1;32m^[m
